Debut d'implementation de la classe Cell.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Pangea/CMakeCache.txt
-Pangea/PWGenExe
-Pangea/CMakeFiles
-Pangea/Diapo_generation_terrain.pdf
+/Pangea/CMakeCache.txt
+/Pangea/PWGenExe
+/Pangea/CMakeFiles/
+/Pangea/Diapo_generation_terrain.pdf
