--- a/Pangea/CMakeLists.txt
+++ b/Pangea/CMakeLists.txt
@@ -1,6 +1,8 @@
 #Déclaration du projet
 
 project(PWorldGen CXX)
+set(debug "yes")
+
 set(PWorldGen_VERSION_MAJOR 0)
 set(PWorldGen_VERSION_MINOR 1)
 
@@ -9,7 +11,6 @@ set(SRC_DIR "${PROJECT_SOURCE_DIR}/source")
 #Déclaration de l'exécutable
 
 add_executable(
-
     PWGenExe
     
     ${SRC_DIR}/IO.h
@@ -26,4 +27,10 @@ add_executable(
 
     ${SRC_DIR}/main.cpp
 )
+
+if ( DEBUG == "yes" )
+	#if( CMAKE_COMPILER_IS_GNUCXX )
+	set( CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wshadow -Wconversion -Wsign-conversion -Wunused-parameter -Wno-long-long -pedantic -g" )
+else		
+	set( CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wshadow -Wconversion -Wsign-conversion -Wunused-parameter -Wno-long-long -pedantic -O2" )
 
