--- a/Pangea/CMakeLists.txt
+++ b/Pangea/CMakeLists.txt
@@ -1,7 +1,7 @@
 #Déclaration du projet
 
 project(PWorldGen CXX)
-set(debug "yes")
+set(DEBUG "yes")
 
 set(PWorldGen_VERSION_MAJOR 0)
 set(PWorldGen_VERSION_MINOR 1)
@@ -13,24 +13,24 @@ set(SRC_DIR "${PROJECT_SOURCE_DIR}/source")
 add_executable(
     PWGenExe
     
-    ${SRC_DIR}/IO.h
-    ${SRC_DIR}/IO.cpp
+    ${SRC_DIR}/Interface/IO.h
+    ${SRC_DIR}/Interface/IO.cpp
     
-    ${SRC_DIR}/World.h
-    ${SRC_DIR}/World.cpp
+    ${SRC_DIR}/Core/Zone.h
+    ${SRC_DIR}/Core/Zone.cpp
     
-    ${SRC_DIR}/Zone.h
-    ${SRC_DIR}/Zone.cpp
+    ${SRC_DIR}/Core/Couche.h
+    ${SRC_DIR}/Core/Couche.cpp
     
-    ${SRC_DIR}/Cell.h
-    ${SRC_DIR}/Cell.cpp
+    ${SRC_DIR}/Core/World.h
+    ${SRC_DIR}/Core/World.cpp
 
     ${SRC_DIR}/main.cpp
 )
 
-if ( DEBUG == "yes" )
+if ( ${DEBUG} EQUAL "yes" )
 	#if( CMAKE_COMPILER_IS_GNUCXX )
 	set( CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wshadow -Wconversion -Wsign-conversion -Wunused-parameter -Wno-long-long -pedantic -g" )
-else		
+else()
 	set( CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wshadow -Wconversion -Wsign-conversion -Wunused-parameter -Wno-long-long -pedantic -O2" )
-
+endif()
