Ajout de KX_Cell.h/cpp KX_Terrain.h/cpp
Toutes les entêtes sont érites et documentées. Mais les cpp sont vide.

--- a/blender/source/gameengine/Ketsji/CMakeLists.txt
+++ b/blender/source/gameengine/Ketsji/CMakeLists.txt
@@ -134,6 +134,8 @@ set(SRC
 	KX_VisibilityActuator.cpp
 	KX_WorldInfo.cpp
 	KX_WorldIpoController.cpp
+	KX_Cell.cpp
+	KX_Terrain.cpp
 
 	BL_Action.h
 	BL_ActionManager.h
@@ -212,6 +214,8 @@ set(SRC
 	KX_VisibilityActuator.h
 	KX_WorldInfo.h
 	KX_WorldIpoController.h
+	KX_Cell.h
+	KX_Terrain.h
 
 	# orphan headers (not apart of a library)
 	../Physics/common/PHY_DynamicTypes.h
